@@ -3,6 +3,7 @@ Changes from jTDS 0.8-rc1
 
 05/03/2004 - Brian Heineman
  o Corrected TdsSocket to compile under 1.3.
+ o Added initial (limited) ParameterMetaData support.
 
 05/02/2004 - Brian Heineman
  o Updated SQLException handling to set the initCause() method with the
